fix static linking in ex

--- a/example/memcache_c++/Makefile
+++ b/example/memcache_c++/Makefile
@@ -21,7 +21,7 @@ ifeq ($(SYSTEM),Darwin)
 	LINK_OPTIONS_SO = $^ $(STATIC_LINKINGS) $(DYNAMIC_LINKINGS)
 	LINK_OPTIONS = $^ $(STATIC_LINKINGS) $(DYNAMIC_LINKINGS)
 else ifeq ($(SYSTEM),Linux)
-	STATIC_LINKINGS += lbrpc
+	STATIC_LINKINGS += -lbrpc
 	LINK_OPTIONS_SO = -Xlinker "-(" $^ -Xlinker "-)" $(STATIC_LINKINGS) $(DYNAMIC_LINKINGS)
 	LINK_OPTIONS = -Xlinker "-(" $^ -Wl,-Bstatic $(STATIC_LINKINGS) -Wl,-Bdynamic -Xlinker "-)" $(DYNAMIC_LINKINGS)
 endif
