fix some problems according to review comments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -154,7 +154,7 @@ if(BRPC_WITH_RDMA)
     set(RDMA_DYNAMIC_LIB
         ibverbs
         rdmacm
-        nl
+        #nl  # Some versions of OFED may require this lib
         )
 endif()
 
