--- a/example/rdma_performance/CMakeLists.txt
+++ b/example/rdma_performance/CMakeLists.txt
@@ -68,7 +68,7 @@ set(DYNAMIC_LIB
     z
     ibverbs
     rdmacm
-    nl
+    #nl  # Some versions of OFED may require this lib
     tcmalloc
     )
 
