--- a/test/BUILD
+++ b/test/BUILD
@@ -220,6 +220,8 @@ cc_test(
         "bthread_dispatcher_unittest.cpp",
         "bthread_fd_unittest.cpp",
         "bthread_mutex_unittest.cpp",
+        "bthread_queue_mutex_unittest.cpp",
+        "bthread_barrel_unittest.cpp",
         "bthread_setconcurrency_unittest.cpp",
         # glog CHECK die with a fatal error
         "bthread_key_unittest.cpp"
