--- a/config.h.in
+++ b/config.h.in
@@ -1,6 +1,9 @@
 #ifndef  BUTIL_CONFIG_H
 #define  BUTIL_CONFIG_H
 
-#cmakedefine BRPC_WITH_GLOG @WITH_GLOG_VAL@
+#ifdef BRPC_WITH_GLOG
+#undef BRPC_WITH_GLOG
+#endif
+#cmakedefine BRPC_WITH_GLOG @BRPC_WITH_GLOG@
 
 #endif  // BUTIL_CONFIG_H
